force-app/main/default/objects/Game_Event__e/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <label>Content</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>