force-app/main/default/objects/Game_Event__e/fields/Receiver_Id__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Id__c</fullName>
    <label>Receiver Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>